--- a/index.html
+++ b/index.html
@@ -4,50 +4,106 @@
 <head>
   <meta charset="UTF-8" />
   <title>Teste Localização</title>
+
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASfq-ysEu9aiFAa8VKH5dGBw-VLTR5nUs&libraries=&v=weekly"
-    defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASfq-ysEu9aiFAa8VKH5dGBw-VLTR5nUs&pbraries=&v=weekly" defer></script>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    *::selection {
+      background: #fefefe;
+      color: #212121;
+    }
+
+    html,
+    body {
+      font-size: 14px;
+      background: #212121;
+    }
+
+    #map {
+      height: 480px;
+      width: 100%;
+    }
+
+    #info {
+      padding: 1rem;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+    }
+
+    p {
+      padding: 0.5rem;
+      color: #fefefe;
+    }
+
+    .hide {
+      display: none;
+    }
+
+    .show {
+      display: block;
+    }
+  </style>
+</head>
+
+<body>
+  <section id="map"></section>
+  <section id="info"></section>
+
   <script>
+    function setCoordsVariables(element, position) {
+      if (!element || !position) return;
+
+      const latitude = document.createElement('p');
+      latitude.innerHTML = `Latitude: ${position.coords.latitude}`;
+      element.appendChild(latitude);
+
+      const longitude = document.createElement('p');
+      longitude.innerHTML = `Longitude: ${position.coords.longitude}`;
+      element.appendChild(longitude);
+
+      // const altitude = document.createElement('p');
+      // altitude.innerHTML = `Altitude: ${position.coords.altitude}`;
+      // element.appendChild(altitude);
+
+      const accuracy = document.createElement('p');
+      accuracy.innerHTML = `Acurácia: ${position.coords.accuracy}m`;
+      element.appendChild(accuracy);
+
+      // const altitudeAccuracy = document.createElement('p');
+      // altitudeAccuracy.innerHTML = `Acurácia Vertical: ${position.coords.altitudeAccuracy}`;
+      // element.appendChild(altitudeAccuracy);
+
+      // const heading = document.createElement('p');
+      // heading.innerHTML = `Direção: ${position.coords.heading}`;
+      // element.appendChild(heading);
+
+      // const speed = document.createElement('p');
+      // speed.innerHTML = `Velocidade: ${position.coords.speed}`;
+      // element.appendChild(speed);
+
+      const d = new Date(position.timestamp).toISOString().split('T');
+      const horario = document.createElement('p');
+      horario.innerHTML = `Horário: ${d[0]} ${d[1].substr(0, 8)}`;
+      element.appendChild(horario);
+    }
+
+    function resetCoordsVariables() {
+      const variables = Array.from(document.querySelectorAll('#info p'));
+      variables.forEach(v => v.remove());
+    }
+
     function initMap(position) {
       if (!position) return;
 
-      const lat = position.coords.latitude;
-      const lng = position.coords.longitude;
-      const info = document.querySelector("#info");
+      setCoordsVariables(document.querySelector("#info"), position);
 
-      const latitude = document.createElement("p");
-      latitude.innerHTML = `Latitude: ${lat}`;
-      info.appendChild(latitude);
-
-      const longitude = document.createElement("p");
-      longitude.innerHTML = `Longitude: ${lng}`;
-      info.appendChild(longitude);
-
-      const altitude = document.createElement("p");
-      altitude.innerHTML = `Altitude: ${position.coords.altitude}`;
-      info.appendChild(altitude);
-
-      const acuraciaHorizontal = document.createElement("p");
-      acuraciaHorizontal.innerHTML = `Acurácia Horizontal: ${position.coords.accuracy}`;
-      info.appendChild(acuraciaHorizontal);
-
-      const acuraciaVertical = document.createElement("p");
-      acuraciaVertical.innerHTML = `Acurácia Vertical: ${position.coords.altitudeAccuracy}`;
-      info.appendChild(acuraciaVertical);
-
-      const direcao = document.createElement("p");
-      direcao.innerHTML = `Direção: ${position.coords.heading}`;
-      info.appendChild(direcao);
-
-      const velocidade = document.createElement("p");
-      velocidade.innerHTML = `Velocidade: ${position.coords.speed}`;
-      info.appendChild(velocidade);
-
-      const horario = document.createElement("p");
-      horario.innerHTML = `Horário: ${position.timestamp}`;
-      info.appendChild(horario);
-
-      const location = { lat, lng };
+      const location = { lat: position.coords.latitude, lng: position.coords.longitude };
 
       const map = new google.maps.Map(document.querySelector('#map'), {
         center: location,
@@ -61,15 +117,29 @@
       });
     }
 
+    function errorPosition(err) {
+      document.querySelector('#map').className = 'hide';
+      resetCoordsVariables();
+      const error = document.createElement('p');
+      error.innerHTML = 'Geolocalização não habilitada';
+      document.querySelector("#info").appendChild(error);
+    }
+
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(initMap);
+      document.querySelector('#map').className = 'show';
+      navigator.geolocation.getCurrentPosition(initMap, errorPosition);
+      setInterval(() => {
+        resetCoordsVariables();
+        navigator.geolocation.getCurrentPosition(initMap, errorPosition);
+      }, 10 * 1000);
+
+    } else {
+      document.querySelector('#map').className = 'hide';
+      const error = document.createElement('p');
+      error.innerHTML = 'Dispositivo não possui geolocalização';
+      document.querySelector("#info").appendChild(error);
     }
   </script>
-</head>
-
-<body>
-  <section id="info"></section>
-  <section id="map" style="height: 320px; width: 480px;"></section>
 </body>
 
 </html>
