--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Teste Localização</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASfq-ysEu9aiFAa8VKH5dGBw-VLTR5nUs&pbraries=&v=weekly" defer></script>
 
